<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAgent</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Welcome to Android Agent!!</string>
    <string name="title_activity_frame_animation">FrameAnimationActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_functions">Functions</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_home">Smart Butler</string>
    <string name="prompt">  Select your Mood  </string>
    <string name="action_search">  Search  </string>
    <string name="action_chat">Chat</string>
    <string name="action_events">Events</string>
    <string name="action_important">Important</string>
    <string name="action_share">Share</string>
    <string name="action_email">Email</string>

    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>

    <string name="select_Category">Select Category</string>

    <drawable name="darkgrey">#606060</drawable>

    <string-array name="emotion_icon">
        <item>SadFace</item>
        <item>SmileyFace</item>
    </string-array>

    <string name="title_activity_email">Email</string>
    <!-- <string name="title_activity_tutorial">Tutorial</string> -->
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_butler">Butler</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_record_tutorial">RecordTutorial</string>
    <string name="hello">Custom Spinner</string>
    <string name="defaultText">  Select your Company  </string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="title_activity_play_function">PlayFunction</string>
    <string name="title_activity_play">Play</string>
    <string name="title_activity_play2">Play2</string>
    <string name="title_activity_play1">Play1</string>
    <string name="title_activity_learn1">Learn1</string>
    <string name="title_activity_level2">Level2</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_search_event">SearchEvent</string>

</resources>