<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
 
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_action_chat"
        android:showAsAction="ifRoom"
        android:title="@string/action_chat"/>

    <item
        android:id="@+id/action_events"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_events"/>
    
    <item
        android:id="@+id/action_important"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_important"
        android:showAsAction="ifRoom"
        android:title="@string/action_important"/>
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    
     <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_email"/>
     
     <item
        android:id="@+id/acemail"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_email"/>
     
     <item
        android:id="@+id/dateTxt"
        android:actionViewClass="android.widget.TextView"
        android:showAsAction="always"
        android:title="Hommmmmme"/>

</menu>
